--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
             Born on Planet Vegeta to a race of powerful alien warriors known as the Saiyans, Kakarot was sent to Earth as a baby by the Saiyan Army to destroy all life on the planet and conquer it
             However after head injury Goku forgot all about his Saiyan origins and he would befriend its populace and devote himself to protecting the Earth from all those who threaten as well as strive to become the strongest warrior possible. 
         </p>
+        <p class="content-section__avatar-desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet neque quam. Quisque quis tempor nunc, a sagittis dui. Integer vitae dapibus ipsum. Sed vel consectetur ante, ac feugiat orci. Etiam ultrices orci eu est tincidunt, ac malesuada augue posuere. Curabitur varius ex et convallis sodales. Nunc elementum risus quis eros venenatis, dapibus venenatis augue aliquam. Fusce vehicula diam ac ante feugiat, quis molestie erat varius. Etiam gravida ornare malesuada.
+            Donec pretium sodales nibh et sagittis. Mauris eget tincidunt odio. Aenean imperdiet iaculis augue quis gravida. Cras elit leo, ultricies nec odio et, condimentum fringilla elit. Nam id mollis metus. Quisque id erat sed nisi pretium gravida. Proin id vulputate risus. Etiam posuere eros ac ante lobortis, tincidunt imperdiet risus pretium.
+        </p>
+        <p class="content-section__avatar-desc">
+            Vestibulum ac scelerisque magna. Nullam sodales a quam eget pellentesque. Morbi condimentum vel lectus condimentum interdum. Nam in sem quis dui semper sodales. Vestibulum quis diam risus. Donec gravida ut eros vitae volutpat. Duis hendrerit sapien sit amet ligula dapibus feugiat. Quisque porttitor lacus vel auctor luctus. Duis tempus in odio in tincidunt. Quisque cursus varius metus, nec pretium urna. Integer molestie erat eget lorem gravida gravida. Quisque eu placerat urna. Donec tincidunt gravida sem, sed laoreet justo sodales sit amet. Nam vitae lorem elementum nulla eleifend posuere.
+            Integer non gravida purus. Donec consectetur nunc sem, ac elementum tortor accumsan in. Morbi scelerisque quam pharetra vehicula finibus. Duis ut vulputate est. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sodales felis eget vulputate dignissim. Cras vel gravida augue, sit amet volutpat orci. Vestibulum dui purus, ullamcorper at tincidunt quis, iaculis ac eros. Donec eleifend neque convallis volutpat porttitor. Donec vestibulum in orci non tempor. Quisque rhoncus elit enim, eu aliquam dui lacinia vel.
+            Nunc eleifend finibus magna ut tempus. Donec faucibus elit nec tellus accumsan, a pellentesque purus maximus. In ac nisi interdum, ullamcorper erat id, sagittis quam. Curabitur eros diam, convallis at nunc id, ultricies pharetra leo. Aliquam volutpat, arcu quis consequat blandit, turpis risus volutpat magna, id semper ligula metus dapibus nulla. Phasellus ac nisl euismod, malesuada mauris vel, imperdiet ante. Fusce ut libero laoreet, efficitur augue quis, aliquam diam. Sed a augue ultrices, pretium est vitae, mattis risus. Duis sit amet fermentum velit. Quisque rhoncus a orci quis commodo. Mauris aliquet augue ac aliquam laoreet. 
+        </p>
     </div>
 </div>
 
@@ -51,25 +60,25 @@
     <div class="footer-section__information-block">
         <div class="footer-section__linkbar-container">
             <ul class="footer-section__linkbar-list">
-                <li class="footer-section__linkbar-item">Shitty link 1</li>
-                <li class="footer-section__linkbar-item">Shitty link 2</li>
-                <li class="footer-section__linkbar-item">Shitty link 3</li>
-                <li class="footer-section__linkbar-item">Shitty link 4</li>
-                <li class="footer-section__linkbar-item">Shitty link 5</li>
+                <li class="footer-section__linkbar-item">Link somewhere 1</li>
+                <li class="footer-section__linkbar-item">Link somewhere 2</li>
+                <li class="footer-section__linkbar-item">Link somewhere 3</li>
+                <li class="footer-section__linkbar-item">Link somewhere 4</li>
+                <li class="footer-section__linkbar-item">Link somewhere 5</li>
             </ul>
         </div>
         <div class="footer-section__linkbar-container">
             <ul class="footer-section__linkbar-list">
-                <li class="footer-section__linkbar-item">Shitty link 1</li>
-                <li class="footer-section__linkbar-item">Shitty link 2</li>
-                <li class="footer-section__linkbar-item">Shitty link 3</li>
-                <li class="footer-section__linkbar-item">Shitty link 4</li>
-                <li class="footer-section__linkbar-item">Shitty link 5</li>
+                <li class="footer-section__linkbar-item">Link somewhere 1</li>
+                <li class="footer-section__linkbar-item">Link somewhere 2</li>
+                <li class="footer-section__linkbar-item">Link somewhere 3</li>
+                <li class="footer-section__linkbar-item">Link somewhere 4</li>
+                <li class="footer-section__linkbar-item">Link somewhere 5</li>
             </ul>
         </div>
     </div>
     <div class="footer-section__copyleft-copyup-copydown">
-        Nobody gives a shit about your rights &copy; 2022
+        Nobody gives a shit about your damn rights &copy; 2022
     </div>
 </div>
 
